feat: add markup about page

--- a/songbird/src/index.html
+++ b/songbird/src/index.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-  <title>SongBird</title>
-</head>
-<body>
-  
-</body>
+
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <title>SongBird</title>
+  </head>
+
+  <body>
+    <header class="header">
+      <div class="wrapper header__wrapper">
+        <div class="header__logo">
+          <div class="logo"></div>
+        </div>
+        <nav class="header__navigation">
+          <ul class="nav">
+            <li class="nav__link">
+              <a href="#about" class="link">About</a>
+            </li>
+            <li class="nav__link">
+              <a href="#quize" class="link">Quiz</a>
+            </li>
+            <li class="nav__link">
+              <a href="#result" class="link">Result</a>
+            </li>
+            <li class="nav__link">
+              <a href="#gallery" class="link">Gallery</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="main">
+      <div class="wrapper main__wrapper">
+        <div class="main__content">
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="wrapper footer__wrapper">
+        <div class="footer__logo">
+          <span class="logo__text">©RSSchool</span>
+        </div>
+        <div class="footer__creator">
+          <a href="#git" class="footer__designed designed">
+            <span class="designed__text">Designed by Sergey Pansevich</span>
+            <span class="designed__text">©Yem Digital 2022</span>
+          </a>
+        </div>
+      </div>
+    </footer>
+  </body>
+
 </html>
