feat: add content in header and footer section

--- a/songbird/src/index.html
+++ b/songbird/src/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <div class="wrapper header__wrapper">
         <div class="header__logo">
-          <div class="logo"></div>
+          <span class="logo-songbird"></span>
         </div>
         <nav class="header__navigation">
           <ul class="nav">
@@ -42,13 +42,15 @@
     </main>
     <footer class="footer">
       <div class="wrapper footer__wrapper">
-        <div class="footer__logo">
-          <span class="logo__text">©RSSchool</span>
+        <div class="footer__logo footer-logo">
+          <a href="https://rs.school/js/" class="footer-logo__link">
+            <span class="footer-logo__img"></span>
+          </a>
         </div>
         <div class="footer__creator">
-          <a href="#git" class="footer__designed designed">
-            <span class="designed__text">Designed by Sergey Pansevich</span>
-            <span class="designed__text">©Yem Digital 2022</span>
+          <a href="https://github.com/sekaa4" class="footer__designed designed">
+            <span class="designed__img"></span>
+            <span class="designed__text">©Digital 2022</span>
           </a>
         </div>
       </div>
