--- a/songbird/src/index.html
+++ b/songbird/src/index.html
@@ -37,6 +37,27 @@
     <main class="main">
       <div class="wrapper main__wrapper">
         <div class="main__content">
+          <h2 class="main__title">Добро пожаловать на викторину!</h2>
+          <p class="main__text">В данной викторине вам предстоит выбирать птиц согласно их пения</p>
+          <ul>
+            <li class="main__list">в начале игры у вас будет 0 баллов;</li>
+            <li class="main__list">при нажатии по варианту ответа с названием птицы, в блоке с описанием птицы будет
+              выведена информация о ней;
+            </li>
+            <li class="main__list">если дан правильный ответ с первой попытки, счёт увеличивается на 5 баллов;
+            </li>
+            <li class="main__list">если выбран правильный ответ, в блоке с вопросом будет выведено название и
+              изображение птицы, учитывайте, что каждая
+              следующая попытка даёт на один балл меньше, если правильный ответ дан только с последней попытки, вы
+              получите 0 баллов;</li>
+            <li class="main__list">баллы за все вопросы суммируются;</li>
+            <li class="main__list">правильные и неправильные ответы имеют звуковое и цветовое сопровождение;</li>
+            <li class="main__list">если дан правильный ответ, активируется кнопка "Дальше" и появляется
+              возможность перейти к
+              следующему вопросу;</li>
+            <li class="main__list">после последнего вопроса выводится страница с результатами игры;</li>
+          </ul>
+          <button class="button main__button">Начать Викторину</button>
         </div>
       </div>
     </main>
