feat: add quiz for quiz page

--- a/songbird/src/index.html
+++ b/songbird/src/index.html
@@ -19,16 +19,16 @@
         <nav class="header__navigation">
           <ul class="nav">
             <li class="nav__link">
-              <a href="#about" class="link">About</a>
+              <a href="#about" class="link link__about">About</a>
             </li>
             <li class="nav__link">
-              <a href="#quiz" class="link">Quiz</a>
+              <a href="#quiz" class="link link__quiz">Quiz</a>
             </li>
             <li class="nav__link">
-              <a href="#result" class="link">Result</a>
+              <a href="#result" class="link link__result">Result</a>
             </li>
             <li class="nav__link">
-              <a href="#gallery" class="link">Gallery</a>
+              <a href="#gallery" class="link link__gallery">Gallery</a>
             </li>
           </ul>
         </nav>
