feat: add addaptive and styles for pages

--- a/songbird/src/index.html
+++ b/songbird/src/index.html
@@ -30,7 +30,7 @@
             <li class="nav__link">
               <a href="#gallery" class="link link__gallery" data-lang="linkGallery">Галлерея</a>
             </li>
-            <select id="language" size="1" class="language nav__language">
+            <select id="language" size="1" class="language nav__language nav__link">
               <option class="option language__en" value="en" label="En">En</option>
               <option class="option language__ru" value="ru" label="Ru" selected>Ru</option>
             </select>
